syntax = "proto3";

package cells;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/cells/protos";

////////////////////////////////////////////////////////////////////////////////

message CollectClusterCapacityState {
    repeated string ProcessedCells = 1;
}
